--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </section>
   <footer>
     <div class="container">
-      <p>Asal Academy, Copyright &copy; 2018</p>
+      <p>ASAL Academy, Copyright &copy; 2018</p>
     </div>
   </footer>
 </body>
