--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <section id="boxes">
     <div class="container">
       <h1>CHOOSE YOUR FUTURE IN Information Technology</h1>
-      <p>Pursue your dream career by selecting one of four<br>
-        tracks in High Demand</p>
+      <p><span class="subtitle" style="font-size:24;font-weight:bold;">Pursue your dream career by selecting one of four<br>
+        tracks in High Demand</span></p>
         <div class="box">
           <img src="./img/fullstack.png">
           <h3>BECOME A FULL-STACK WEB DEVELOPER</h3>
