--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta name="description" content="Learn Plan design and develop">
   <meta name="keywords" content="ICT, Webdesign">
   <meta name="author" content="Mohamed A. Abdisamad">
-  <title>Asal Academy</title>
+  <title>Asal Academy | Welcome</title>
   <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
   <header>
     <div class="container">
       <div id="logo">
-        <h1><span class="hightlight">ASAL </span>Academy</h1>
+        <h1><span class="hightlight"><a style="text-decoration:none;color:chocolate;"href="index.html">ASAL </a></span>Academy</h1>
       </div>
       <nav id="nav">
         <ul>
@@ -38,7 +38,7 @@
       <h1>subscribe to our newsletter</h1>
       <form>
         <input type="email" placeholder="Enter Email ... ">
-        <button type="submit" class="btn">Subscribe</button>
+        <button type="submit" class="btn1">Subscribe</button>
       </form>
     </div>
   </section>
