--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div id="logo">
-        <h1><span class="hightlight">ASAL </span>Academy</h1>
+        <h1><span class="hightlight"><a style="text-decoration:none;color:chocolate;"href="index.html">ASAL </a></span>Academy</h1>
       </div>
       <nav id="nav">
         <ul>
@@ -29,7 +29,7 @@
       <h1>subscribe to our newsletter</h1>
       <form>
         <input type="email" placeholder="Enter Email ... ">
-        <button type="submit" class="btn">Subscribe</button>
+        <button type="submit" class="btn1">Subscribe</button>
       </form>
     </div>
   </section>
