--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     </div>
   </section>
-  <footer>
+  <footer id="footer">
     <div class="container">
       <p>Asal Academy, Copyright &copy; 2018</p>
     </div>
